@@ -5,12 +5,12 @@ Short Answer:
 
 Version stand alone: unzip the tarball an use it:
 
-	python2.4 swaml.py --help
+	swaml.py --help
 
 
 Dependencies:
 	- python >= 2.4.0
-	- rdflib >= 2.2.0 	(official releases at <http://rdflib.net/releases/>)
+	- rdflib >= 2.3.0 	(official releases at <http://rdflib.net/releases/>)
 			   			(advertisement: rdflib != librdf)
 
 
