@@ -1,2 +1,6 @@
 
-2006-02-02	First release: 0.0.1
+2006-10-13	0.0.2	- New configuration method based in INI files
+					- New scripts to add FOAF and KML independent support of 
+					  main script
+
+2006-10-02	0.0.1	- First release
